--- a/image_model/templates/main.html
+++ b/image_model/templates/main.html
@@ -13,12 +13,12 @@
         function uploadStartFront(){
             httpFileUpload.uploadStart((returnData)=>{
                 if(returnData.result_cd == "1"){
-                    alert("업로드 성공");
+                    console.log("업로드 성공");
                 } else {
                     if(typeof returnData.result_msg !== "undefined"){
-                        alert("업로드 실패 " + "[" + returnData.result_cd + "]");
+                        console.log("업로드 실패 " + "[" + returnData.result_cd + "]");
                     } else {
-                        alert("업로드 실패 " + "[" + returnData.result_cd + ":" + returnData.result_msg +"]");
+                        console.log("업로드 실패 " + "[" + returnData.result_cd + ":" + returnData.result_msg +"]");
                     }
                 }
         console.log(returnData);
@@ -43,7 +43,6 @@
                     <!-- 간단하게 서비스 소개 페이지 만들기 -->
                     <div class="introduction_contents">
                         <div id="introduction_text_box">
-                            <img src="C:\Users\DataCentric\Downloads\madongseauck.jpg" alt="">
                             <div id="introduction_text">
                                 <p id="introduction_text_title">IMAGE MACHINE</p><br>
                                 <p id="introduction_text_ch2">이미지를 인식하도록 컴퓨터를<br> 학습시키세요.</p><br>
@@ -55,12 +54,12 @@
                         </div>
                     </div>
                     <div id="input_image_text">
-                        <p>Input your Data</p>
-	                    <button id="ajaxCall"  onclick="javascript:uploadStartFront();">호출</button>
+                        <p>이미지를 선택해주세요</p>
                     </div>
                     <div class="flex">
                         <div id="input_image_box"  onclick="file_upload()">
                             <!--<div><p>업로드</p></div>-->
+                        <div  class="blink" ></div>
                             <div>
                                 <img src="../static/image/undraw_image__folder_re_hgp7.svg" alt="" id="img_input_icon">
                                 <input type="file" name="file_lo"  id="hidden_input_file" onchange="setThumbnail(event);"accept="image/*" required multiple>
@@ -70,9 +69,9 @@
                             <img src="../static/image/undraw_not_found_re_x4in.svg" alt="" id="img_loading_icon">
                         </div>
                     </div>
-                    <div id="url_output">
-                        <textarea type="text" id="url_output_text"></textarea>
-                    </div>
+                    <button id="ajaxCall"  onclick="javascript:uploadStartFront();">호출</button>
+                    <br>
+                    <br>
                 </div>
             </section>
             <footer>
