--- a/image_model/templates/main.html
+++ b/image_model/templates/main.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main</title><link rel="stylesheet" href="../static/common.css"><link rel="stylesheet" href="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><title>main</title><link rel="stylesheet" href="../static/common.css"><link rel="stylesheet" href="">
     <script>function uploadStartFront(){httpFileUpload.uploadStart((returnData)=>{if(returnData.result_cd == "1"){console.log("업로드 성공");} else {if(typeof returnData.result_msg !== "undefined"){console.log("업로드 실패 " + "[" + returnData.result_cd + "]");
                     } else {console.log("업로드 실패 " + "[" + returnData.result_cd + ":" + returnData.result_msg +"]");
                     }}console.log(returnData);});}</script>
 </head>
 <body>
-    <script type="text/javascript">
-    </script>
     <form action="/upload" method="post" id="frm" name="frm" enctype="multipart/form-data">
         <div class="container">
-            <header>
-                <div id="logo"><a href="#">IMAGE MACHINE</a></div>
-            </header>
+            <header><div id="logo"><a href="#">IMAGE MACHINE</a></div></header>
             <section>
                 <div class="contents">
                     <!-- 간단하게 서비스 소개 페이지 만들기 -->
@@ -46,7 +41,6 @@
                         </div>
                     </div>
                     <button id="ajaxCall" type="button">호출</button><br><br>
-                </div>
-            </section><footer><p>KOREA &copy; DATACENTRIC OFFICE IN IMAGE MACHINE LEARNNING PROJECT </p></footer>
+                </div></section><footer><p>KOREA &copy; DATACENTRIC OFFICE IN IMAGE MACHINE LEARNNING PROJECT </p></footer>
         </div></form></body><script src="../static/common.js"></script><script src="{{ url_for('static', filename='common.js') }}" > </script>
 </html>
